# commonroad-rule-simplification

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  main.py  mkdocs.yml  pyproject.toml
ci/: .gitlab-ci.yml
cmake/: install.cmake
cpp/: CMakeLists.txt
cpp/include/cr_knowledge_extraction/: extraction_interface.hpp  hello.hpp  proposition.hpp
cpp/include/cr_knowledge_extraction/ego_behavior/: behavior_overapproximation.hpp  ego_params.hpp
cpp/include/cr_knowledge_extraction/ego_behavior/sets/: box.hpp
cpp/include/cr_knowledge_extraction/env_model/: env_model.hpp
cpp/include/cr_knowledge_extraction/kleene/: ego_dependent_kleene_extractor.hpp  kleene_extractor.hpp
cpp/include/cr_knowledge_extraction/kleene/braking/: safe_distance_extractor.hpp
cpp/include/cr_knowledge_extraction/kleene/ego_independent/: ego_independent_extractor.hpp
cpp/include/cr_knowledge_extraction/kleene/general/: cut_in_extractor.hpp
cpp/include/cr_knowledge_extraction/kleene/intersection/: on_incoming_left_of_extractor.hpp  other_turning_extractor.hpp
cpp/include/cr_knowledge_extraction/kleene/position/: at_traffic_sign_extractor.hpp  in_front_of_extractor.hpp  in_same_lane_extractor.hpp  on_lanelet_with_type_extractor.hpp  on_main_carriageway_left_lane_extractor.hpp  on_main_carriageway_right_lane_extractor.hpp  relevant_traffic_light_extractor.hpp
cpp/include/cr_knowledge_extraction/kleene/regulatory/: priority_extractor.hpp
cpp/include/cr_knowledge_extraction/relationship/: relationship_extractor.hpp
cpp/include/cr_knowledge_extraction/relationship/equivalence/: in_intersection_conflict_area_equiv_extractor.hpp  in_same_lane_equiv_extractor.hpp
cpp/include/cr_knowledge_extraction/relationship/implication/: in_front_of_impl_extractor.hpp  safe_distance_impl_extractor.hpp
cpp/include/cr_knowledge_extraction/road_network/: curvilinear_lanelet.hpp  curvilinear_road_network.hpp
cpp/src/: extraction_interface.cpp  hello.cpp  main.cpp  proposition.cpp
cpp/src/ego_behavior/: behavior_overapproximation.cpp
cpp/src/env_model/: env_model.cpp
cpp/src/kleene/braking/: safe_distance_extractor.cpp
cpp/src/kleene/ego_independent/: ego_independent_extractor.cpp
cpp/src/kleene/general/: cut_in_extractor.cpp
cpp/src/kleene/intersection/: on_incoming_left_of_extractor.cpp  other_turning_extractor.cpp
cpp/src/kleene/position/: at_traffic_sign_extractor.cpp  in_front_of_extractor.cpp  in_same_lane_extractor.cpp  on_lanelet_with_type_extractor.cpp  on_main_carriageway_left_lane_extractor.cpp  on_main_carriageway_right_lane_extractor.cpp  relevant_traffic_light_extractor.cpp
cpp/src/kleene/regulatory/: priority_extractor.cpp
cpp/src/relationship/equivalence/: in_intersection_conflict_area_equiv_extractor.cpp  in_same_lane_equiv_extractor.cpp
cpp/src/relationship/implication/: in_front_of_impl_extractor.cpp  safe_distance_impl_extractor.cpp
cpp/src/road_network/: curvilinear_road_network.cpp
cpp/tests/: CMakeLists.txt  test_hello.cpp  test_hello.hpp
cpp/tests/ego_behavior/sets/: test_box.cpp  test_box.hpp
cpp/tests/relationship/equivalence/: test_in_same_lane_equiv_extractor.cpp  test_in_same_lane_equiv_extractor.hpp
cpp/tests/relationship/implication/: test_in_front_of_impl_extractor.cpp  test_in_front_of_impl_extractor.hpp
cpp/tests/scenarios/: interstate_simple.xml  two_lanes.xml
cpp/tests/test_envs/: test_envs.cpp  test_envs.hpp
docs/: index.md
docs/reference/: facade.md  formula.md  instantiation.md  knowledge_extraction.md  simplification.md
python_binding/: CMakeLists.txt  pybind.cpp  pybind.hpp
python_binding/helper/: world.cpp  world.hpp
readme/: README_FOR_DEVS.md
scenarios/: DEU_MerzenichRather-2_8814400_T-14549.xml
src/cr_knowledge_extraction/: __init__.py  hello.py
src/cr_knowledge_extraction/formula/: formatting.py
src/cr_knowledge_extraction/traffic_rule/: R_G1.py  R_I5.py  R_IN1.py  R_IN3.py  R_IN4.py  R_IN5.py  instantiation.py  not_endanger_rule.py  rule.py
src/cr_rule_simplification/: __init__.py
src/cr_rule_simplification/facade/: configuration.py  traffic_rule_facade.py
src/cr_rule_simplification/formula/: formatting.py
src/cr_rule_simplification/instantiation/: R_G1.py  R_I5.py  R_IN1.py  R_IN3.py  R_IN4.py  R_IN5.py  not_endanger_rule.py  rule.py  traffic_rule_instantiator.py
src/cr_rule_simplification/knowledge_extraction/: __init__.py  knowledge_extractor.py
src/cr_rule_simplification/simplification/: traffic_rule_simplifier.py
