[project]
name = "cr_rule_simplification"
version = "0.1.0"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10,<3.12"
#license = { file = "LICENSE.txt" }
authors = [
    { name = "Cyber-Physical Systems Group - Technical University of Munich", email = "commonroad@lists.lrz.de" }
]
description = "A Toolbox for Simplifying Traffic Rules in CommonRoad Scenarios"
keywords = [
    "autonomous vehicles",
    "automated driving",
    "specifications",
    "temporal logic",
]
dependencies = [
    "ltl_augmentation@git+ssh://git@gitlab.lrz.de/cps/ltl-augmentation.git#main",
    "commonroad_cpp@git+ssh://git@gitlab.lrz.de/cps/commonroad/environment-model.git@c7fcf8ad0855da4958df3045b3f59a6e482bab6e", # if you change the commit here also update the CMake dependency
    "commonroad-io~=2024.2",
    "commonroad-drivability-checker~=2024.1",
    "commonroad-route-planner~=2025.0.1",
    "numpy (>=1.22.0, <3.0)",
    "more-itertools~=10.5.0",
]

classifiers = [
    "Programming Language :: C++",
    "Programming Language :: Python :: 3.10",
    "Operating System :: POSIX :: Linux",
]

#[project.urls]
#Homepage = "https://commonroad.in.tum.de/tools/commonroad-reach"
#Documentation = "https://commonroad.in.tum.de/docs/commonroad-reach/"
#Forum = "https://commonroad.in.tum.de/forum/c/commonroad-reach/19"
#Source = "https://gitlab.lrz.de/tum-cps/commonroad-reach"

[project.optional-dependencies]
test = [
    "pytest>=6.2.2",
]
docs = [
    "mkdocs~=1.6.1",
    "mkdocs-material~=9.5.42",
    "mkdoxy~=1.2.4",
    "mkdocstrings-python~=1.8",
]
build = [
    "scikit-build-core~=0.11.0",
    "nanobind~=2.2.0",
    "pathspec>=0.12.1",
    "pyproject-metadata>=0.7.1",
    "typing_extensions~=4.12.2",
    "cmake (>=3.24, <4.0)",
]
dev = [
    "pre-commit>=3.7.0",
    "ruff~=0.9",
]

[build-system]
requires = [
    "scikit-build-core~=0.11.0",
    "nanobind~=2.2.0",
    "typing_extensions~=4.12.2",
    "cmake (>=3.24, <4.0)",
]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
build-dir = "build/{build_type}_{wheel_tag}"

minimum-version = "build-system.requires"
cmake.version = ">=3.24"

[tool.scikit-build.cmake.define]
CR_KNOWLEDGE_EXTRACTION_BUILD_PYTHON_BINDINGS = "ON"

[tool.cibuildwheel]
skip = ["pp*", "*-musllinux*"]
archs = ["x86_64"]
environment = { PATH = "$HOME/.cargo/bin:$PATH", PIP_DISABLE_PIP_VERSION_CHECK = "1" }
build-verbosity = 1
test-extras = ["test"]
# required since ltl_augmentation is not yet available on PyPI, so we build the wheel from source
before-build = "curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- --default-toolchain=stable --profile=minimal -y"

[tool.ruff]
line-length = 120
indent-width = 4
format.quote-style = "double"
target-version = "py310"
lint.ignore = ["E203"]
lint.select = ["E4", "E7", "E9", "F", "I"]
